# warband-creator

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml
armory/: forms.py  models.py  urls.py  views.py  warband_urls.py
armory/management/commands/: createuser.py
armory/migrations/: 0001_initial.py  0002_game_weapon_cost_weapon_game.py  0003_remove_weapon_cost_remove_weapon_game_weapongame_and_more.py  0004_alter_weapon_strength.py  0005_weapon_close_combat_weapon_template.py  0006_alter_weapon_damage.py  0007_weapontype_weapon_weapon_type.py  0008_specialrule_weapon_special_rules.py  0009_remove_weapon_ammo_roll_remove_weapon_damage_and_more.py  0010_weaponprofile_cost_weaponprofile_per_shot.py  0011_alter_weaponprofile_ammo_roll.py  0012_faction_weapon_faction.py  0013_weaponprofile_description.py  0014_character_charactergamecost_character_games.py  0015_warband_warbandmember_warbandmemberweapon.py  0016_alter_warbandmember_options_warbandmember_name_and_more.py  0017_warband_user.py  0018_structured_profile_fields.py
armory/templates/armory/: _delete_base.html  _delete_body.html  _form_base.html  _form_body.html  base.html  character_confirm_delete.html  character_detail.html  character_form.html  character_list.html  faction_confirm_delete.html  faction_form.html  faction_list.html  (+29 more)
deploy/: caddy.service  setup.sh  wargear.service
deploy/caddy/: Caddyfile  docker-compose.yml
docs/: server-setup.md
tests/: test_basic.py
wargear/: asgi.py  settings.py  urls.py  wsgi.py
(+3 files in other folders)
