[tool.poetry]
name = "wargear"
version = "0.1.0"
description = ""
authors = ["deadlight <deadlight@anomaly.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
gunicorn = "^23.0"
psycopg2-binary = "^2.9"

[tool.poetry.group.dev.dependencies]
black = "^24.0"
pre-commit = "^4.0"
pytest = "^8.0"
pytest-django = "^4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "wargear.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--tb=short -v"
